// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image handles no uri 1`] = `null`;

exports[`Image loads high-res 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Array [
      Object {
        "backgroundColor": "#EDEDED",
        "width": "100%",
      },
      undefined,
      Object {
        "aspectRatio": undefined,
      },
      Object {
        "borderRadius": 0,
      },
    ]
  }
>
  <Image
    defaultSource={
      Object {
        "uri": "http://foo.com/bar.png?rel_width=0&rel_height=0&rel_vertical_offset=0&rel_horizontal_offset=0&offline=true",
      }
    }
    fadeDuration={0}
    onLayout={[Function]}
    progressiveRenderingEnabled={true}
    resizeMethod="resize"
    source={
      Object {
        "uri": "http://foo.com/bar.png?rel_width=0&rel_height=0&rel_vertical_offset=0&rel_horizontal_offset=0&offline=false&resize=1000",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "resizeMode": "cover",
          },
          Object {
            "borderRadius": 0,
          },
        ],
      ]
    }
  />
</View>
`;

exports[`Image renders 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Array [
      Object {
        "backgroundColor": "#EDEDED",
        "width": "100%",
      },
      undefined,
      Object {
        "aspectRatio": undefined,
      },
      Object {
        "borderRadius": 0,
      },
    ]
  }
>
  <Image
    defaultSource={
      Object {
        "testUri": "../../../packages/responsive-image/assets/t.png",
      }
    }
    fadeDuration={300}
    onLayout={[Function]}
    progressiveRenderingEnabled={true}
    resizeMethod="resize"
    source={
      Object {
        "uri": "http://foo.com/bar.png?rel_width=0&rel_height=0&rel_vertical_offset=0&rel_horizontal_offset=0&offline=true",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "resizeMode": undefined,
          },
          Object {
            "borderRadius": 0,
          },
        ],
      ]
    }
  />
</View>
`;

exports[`Image respects resizeMode 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Array [
      Object {
        "backgroundColor": "#EDEDED",
        "width": "100%",
      },
      undefined,
      Object {
        "aspectRatio": undefined,
      },
      Object {
        "borderRadius": 0,
      },
    ]
  }
>
  <Image
    defaultSource={
      Object {
        "testUri": "../../../packages/responsive-image/assets/t.png",
      }
    }
    fadeDuration={300}
    onLayout={[Function]}
    progressiveRenderingEnabled={true}
    resizeMethod="resize"
    source={
      Object {
        "uri": "http://foo.com/bar.png?rel_width=0&rel_height=0&rel_vertical_offset=0&rel_horizontal_offset=0&offline=true",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "resizeMode": undefined,
          },
          Object {
            "borderRadius": 0,
          },
        ],
      ]
    }
  />
</View>
`;
